--- a/app/assets/javascripts/watchers.js.erb
+++ b/app/assets/javascripts/watchers.js.erb
@@ -1,11 +1,6 @@
 // # Place all the behaviors and hooks related to the matching controller here.
 // # All this logic will automatically be available in application.js.
 // # You can use CoffeeScript in this file: http://jashkenas.github.com/coffee-script/
- // $(function() {
- //        $.getJSON("/autocomplete_game_name",function(data){
- //          $( "div #watcher_game_name" ).autocomplete({
- //            position:{ of: "#watcher_game_name"},
- //            source: data
- //          });
- //        });
- //    });
+$(function(){
+  $('#watcher_game_name').chosen();
+});
