--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,6 +1,6 @@
 body {
-  background-color: #fff;
-  color: #333;
+  background-image: url("navy_blue.png");
+  color: #000;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
@@ -46,12 +46,12 @@ div {
 }
 
 #error_explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px;
+  width: 400px;
+
+  padding: 0 35%;
   padding-bottom: 0;
+  background-color: #c00;
   margin-bottom: 20px;
-  background-color: #f0f0f0;
   h2 {
     text-align: left;
     font-weight: bold;
@@ -59,11 +59,12 @@ div {
     font-size: 12px;
     margin: -7px;
     margin-bottom: 0px;
-    background-color: #c00;
+    
     color: #fff;
   }
   ul li {
-    font-size: 12px;
-    list-style: square;
+    font-size: 16px;
+    list-style: none;
+    color: #ffffff ;
   }
 }
